Modals getting cut off fix

--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -745,3 +745,7 @@ ol.plain {
 table { 
   width: 100%; 
 }
+
+.modal-lg{
+  margin-top: 100px !important;
+}
